--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+# Nix
 .direnv
-.jj
 result
+result-*
+
+# Jujutsu
+.jj
 
 # Logs
 logs
@@ -9,10 +13,20 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 dev-debug.log
+
 # Dependency directories
 node_modules/
+
+# Rust
+target/
+Cargo.lock
+**/*.rs.bk
+*.pdb
+
 # Environment variables
 .env
+.env.local
+
 # Editor directories and files
 .idea
 .vscode
@@ -21,8 +35,13 @@ node_modules/
 *.njsproj
 *.sln
 *.sw?
+.project
+.settings/
+.classpath
+
 # OS specific
 .DS_Store
+Thumbs.db
 
 # Task files
 # tasks.json
